; ModuleID = '/home/carl/AnghaBench/git/extr_diff.c_parse_dirstat_opt.c'
source_filename = "/home/carl/AnghaBench/git/extr_diff.c_parse_dirstat_opt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i32 }
%struct.diff_options = type { i32 }

@STRBUF_INIT = common dso_local global %struct.strbuf zeroinitializer, align 4
@.str = private unnamed_addr constant [50 x i8] c"Failed to parse --dirstat/-X option parameter:\0A%s\00", align 1
@DIFF_FORMAT_DIRSTAT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.diff_options*, i8*)* @parse_dirstat_opt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @parse_dirstat_opt(%struct.diff_options* %0, i8* %1) #0 {
  %3 = alloca %struct.diff_options*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.strbuf, align 4
  store %struct.diff_options* %0, %struct.diff_options** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = bitcast %struct.strbuf* %5 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %6, i8* align 4 bitcast (%struct.strbuf* @STRBUF_INIT to i8*), i64 4, i1 false)
  %7 = load %struct.diff_options*, %struct.diff_options** %3, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = call i64 @parse_dirstat_params(%struct.diff_options* %7, i8* %8, %struct.strbuf* %5)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %16

11:                                               ; preds = %2
  %12 = call i32 @_(i8* getelementptr inbounds ([50 x i8], [50 x i8]* @.str, i64 0, i64 0))
  %13 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %5, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @die(i32 %12, i32 %14)
  br label %16

16:                                               ; preds = %11, %2
  %17 = call i32 @strbuf_release(%struct.strbuf* %5)
  %18 = load i32, i32* @DIFF_FORMAT_DIRSTAT, align 4
  %19 = load %struct.diff_options*, %struct.diff_options** %3, align 8
  %20 = getelementptr inbounds %struct.diff_options, %struct.diff_options* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = or i32 %21, %18
  store i32 %22, i32* %20, align 4
  ret i32 1
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i64 @parse_dirstat_params(%struct.diff_options*, i8*, %struct.strbuf*) #2

declare dso_local i32 @die(i32, i32) #2

declare dso_local i32 @_(i8*) #2

declare dso_local i32 @strbuf_release(%struct.strbuf*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
